fix on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -866,6 +866,10 @@ h4 {
   stroke-width: 3px;
 }
 
+.max-w-screen {
+  max-width: 80vw;
+}
+
 .appearance-none {
   -webkit-appearance: none;
      -moz-appearance: none;
