--- a/resources/sass/layout.scss
+++ b/resources/sass/layout.scss
@@ -181,3 +181,7 @@ $size: 5vw;
         stroke-width: 3px;
     }
 }
+
+.max-w-screen {
+    max-width: 80vw;
+}
